--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,3 +36,14 @@ jobs:
         
             - name : Run Docker Container
               run : docker run -d -p 3000:3000  --name task-manager-backend-container -e  MONGO_URI=${{ secrets.MONGO_URI }} -e JWT_SECRET=${{ secrets.JWT_SECRET }}  harshx19/task-manager-backend
+
+
+      verification:
+        needs: deploy
+        runs-on: self-hosted
+        steps:
+          - name: Verify Docker Containers
+            run: docker ps
+
+          - name: Show Logs
+            run: docker logs task-manager-backend-container
